--- a/accretion.vcxproj.filters
+++ b/accretion.vcxproj.filters
@@ -28,4 +28,7 @@
       <Filter>template code</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
 </Project>
