--- a/accretion.vcxproj.filters
+++ b/accretion.vcxproj.filters
@@ -8,6 +8,8 @@
     <ClCompile Include="template.cpp">
       <Filter>template code</Filter>
     </ClCompile>
+    <ClCompile Include="blackhole.cpp" />
+    <ClCompile Include="asteroid.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -17,6 +19,9 @@
     <ClInclude Include="template.h">
       <Filter>template code</Filter>
     </ClInclude>
+    <ClInclude Include="blackhole.h" />
+    <ClInclude Include="gameobject.h" />
+    <ClInclude Include="asteroid.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template code">
@@ -30,5 +35,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
+    <None Include="README.md" />
   </ItemGroup>
 </Project>
