Added a game object super class and moved the collision detection over there

--- a/accretion.vcxproj
+++ b/accretion.vcxproj
@@ -225,6 +225,7 @@
     <ClCompile Include="asteroid.cpp" />
     <ClCompile Include="blackhole.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="gameobject.cpp" />
     <ClCompile Include="surface.cpp" />
     <ClCompile Include="template.cpp" />
   </ItemGroup>
