--- a/accretion.vcxproj
+++ b/accretion.vcxproj
@@ -224,7 +224,9 @@
   <ItemGroup>
     <ClCompile Include="asteroid.cpp" />
     <ClCompile Include="blackhole.cpp" />
+    <ClCompile Include="button.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="gamemode.h" />
     <ClCompile Include="gameobject.cpp" />
     <ClCompile Include="progressBar.cpp" />
     <ClCompile Include="score.cpp" />
@@ -236,6 +238,7 @@
   <ItemGroup>
     <ClInclude Include="asteroid.h" />
     <ClInclude Include="blackhole.h" />
+    <ClInclude Include="button.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameobject.h" />
     <ClInclude Include="progressBar.h" />
