--- a/accretion.vcxproj.filters
+++ b/accretion.vcxproj.filters
@@ -35,6 +35,7 @@
     <ClCompile Include="button.cpp">
       <Filter>ui</Filter>
     </ClCompile>
+    <ClCompile Include="menu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -66,6 +67,9 @@
       <Filter>ui</Filter>
     </ClInclude>
     <ClInclude Include="button.h">
+      <Filter>ui</Filter>
+    </ClInclude>
+    <ClInclude Include="menu.h">
       <Filter>ui</Filter>
     </ClInclude>
   </ItemGroup>
