Added death effect (gotta fix the spaghetti code)

--- a/accretion.vcxproj
+++ b/accretion.vcxproj
@@ -227,11 +227,12 @@
     <ClCompile Include="button.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="gamemode.h" />
-    <ClCompile Include="gameobject.cpp" />
+    <ClCompile Include="gameObject.cpp" />
     <ClCompile Include="menu.cpp" />
+    <ClCompile Include="particleEffect.cpp" />
     <ClCompile Include="progressBar.cpp" />
     <ClCompile Include="score.cpp" />
-    <ClCompile Include="spritedgameobject.cpp" />
+    <ClCompile Include="spritedGameObject.cpp" />
     <ClCompile Include="surface.cpp" />
     <ClCompile Include="template.cpp" />
     <ClCompile Include="uiElement.cpp" />
@@ -241,11 +242,12 @@
     <ClInclude Include="blackhole.h" />
     <ClInclude Include="button.h" />
     <ClInclude Include="game.h" />
-    <ClInclude Include="gameobject.h" />
+    <ClInclude Include="gameObject.h" />
     <ClInclude Include="menu.h" />
+    <ClInclude Include="particleEffect.h" />
     <ClInclude Include="progressBar.h" />
     <ClInclude Include="score.h" />
-    <ClInclude Include="spritedgameobject.h" />
+    <ClInclude Include="spritedGameObject.h" />
     <ClInclude Include="surface.h" />
     <ClInclude Include="template.h" />
     <ClInclude Include="uiElement.h" />
